2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs: Advanced text markers can
	  now provide tooltips.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/HslColor.cs: Now supports cairo color
	  conversion.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs: Added basic support for
	  extending markers.

2010-05-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: fixed gtk
	  criticals.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/CodeSegmentPreviewWindow.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Improved multi
	  monitor support.

2010-05-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 604999 -
	  Horizontal scrolling during search is annoying'.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 538800 - Tab
	  positions are at wrong offsets'.


2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditorData.cs: Improved type flow on the
	  mac: convert non breaking space -> standard space.

2010-05-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Dispose animations & fixing
	  'Bug 606206 - Null ref in highlighting'.

2010-05-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditor.cs: Improve the tooltip handling
	  code so that it doesn't create so many glib timeouts. 

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 604978 - Error
	  bubbles prevent mouse clicking to move cursor'.

2010-05-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 605710 - Caret
	  not deleted when clicking out of the text area'.
